--- a/src/test/.deps/single_layer_perceptron_test.Po
+++ b/src/test/.deps/single_layer_perceptron_test.Po
@@ -132,9 +132,61 @@ test/single_layer_perceptron_test.o: \
  /usr/include/c++/4.8/bits/vector.tcc \
  test/../neural_network/../utilities/linear_algebra/dense_matrix.hpp \
  test/../neural_network/../utilities/linear_algebra/../general/dvec_def.hpp \
+ test/../neural_network/../utilities/linear_algebra/../general/cout_tools.hpp \
+ /usr/lib/openmpi/include/mpi.h \
+ /usr/lib/openmpi/include/mpi_portable_platform.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/mpicxx.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/constants.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/functions.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/datatype.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/exception.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/op.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/status.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/request.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/group.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/comm.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/win.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/file.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/errhandler.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/intracomm.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/topology.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/intercomm.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/info.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/datatype_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/functions_inln.h \
+ /usr/include/string.h /usr/include/x86_64-linux-gnu/bits/string3.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/request_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/comm_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/intracomm_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/topology_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/intercomm_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/group_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/op_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/errhandler_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/status_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/info_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/win_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/file_inln.h \
+ /usr/include/c++/4.8/fstream /usr/include/c++/4.8/bits/codecvt.h \
+ /usr/include/x86_64-linux-gnu/c++/4.8/bits/basic_file.h \
+ /usr/include/x86_64-linux-gnu/c++/4.8/bits/c++io.h \
+ /usr/include/c++/4.8/bits/fstream.tcc \
+ test/../neural_network/../utilities/linear_algebra/../wrappers/mpi_wrapper.hpp \
+ test/../neural_network/../utilities/linear_algebra/../wrappers/../general/dcmplx_type_def.hpp \
+ /usr/include/c++/4.8/complex /usr/include/c++/4.8/sstream \
+ /usr/include/c++/4.8/bits/sstream.tcc \
+ test/../neural_network/../utilities/linear_algebra/../wrappers/../general/cout_tools.hpp \
+ test/../neural_network/../utilities/linear_algebra/../wrappers/../general/template_tools.hpp \
+ /usr/include/c++/4.8/iomanip /usr/include/c++/4.8/locale \
+ /usr/include/c++/4.8/bits/locale_facets_nonio.h \
+ /usr/include/c++/4.8/ctime \
+ /usr/include/x86_64-linux-gnu/c++/4.8/bits/time_members.h \
+ /usr/include/x86_64-linux-gnu/c++/4.8/bits/messages_members.h \
+ /usr/include/libintl.h /usr/include/c++/4.8/bits/locale_facets_nonio.tcc \
+ /usr/include/c++/4.8/chrono /usr/include/c++/4.8/ratio \
+ /usr/include/c++/4.8/limits \
  test/../neural_network/../utilities/linear_algebra/dense_vector.hpp \
- /usr/include/c++/4.8/random /usr/include/c++/4.8/limits \
- /usr/include/c++/4.8/bits/random.h \
+ /usr/include/c++/4.8/random /usr/include/c++/4.8/bits/random.h \
  /usr/include/x86_64-linux-gnu/c++/4.8/bits/opt_random.h \
  /usr/lib/gcc/x86_64-linux-gnu/4.8/include/x86intrin.h \
  /usr/lib/gcc/x86_64-linux-gnu/4.8/include/ia32intrin.h \
@@ -151,29 +203,19 @@ test/single_layer_perceptron_test.o: \
  test/../neural_network/../utilities/linear_algebra/dense_vector.hpp \
  test/../neural_network/train.hpp test/../utilities/general/dvec_def.hpp \
  test/../utilities/linear_algebra/dense_matrix.hpp \
- test/../utilities/wrappers/io_wrapper.hpp /usr/include/c++/4.8/fstream \
- /usr/include/c++/4.8/bits/codecvt.h \
- /usr/include/x86_64-linux-gnu/c++/4.8/bits/basic_file.h \
- /usr/include/x86_64-linux-gnu/c++/4.8/bits/c++io.h \
- /usr/include/c++/4.8/bits/fstream.tcc /usr/include/c++/4.8/iomanip \
- /usr/include/c++/4.8/locale \
- /usr/include/c++/4.8/bits/locale_facets_nonio.h \
- /usr/include/c++/4.8/ctime \
- /usr/include/x86_64-linux-gnu/c++/4.8/bits/time_members.h \
- /usr/include/x86_64-linux-gnu/c++/4.8/bits/messages_members.h \
- /usr/include/libintl.h /usr/include/c++/4.8/bits/locale_facets_nonio.tcc \
+ test/../utilities/wrappers/io_wrapper.hpp \
  test/../utilities/wrappers/../general/template_tools.hpp \
  test/../utilities/wrappers/../general/dcmplx_type_def.hpp \
- /usr/include/c++/4.8/complex /usr/include/c++/4.8/sstream \
- /usr/include/c++/4.8/bits/sstream.tcc \
  test/../utilities/optimization/bfgs.hpp \
  test/../utilities/optimization/../general/dvec_def.hpp \
+ test/../utilities/optimization/../general/cout_tools.hpp \
  test/../utilities/optimization/../linear_algebra/dense_matrix.hpp \
  test/../utilities/optimization/../linear_algebra/dense_vector.hpp \
  test/../utilities/optimization/line_search.hpp \
  test/../utilities/optimization/lbfgs.hpp \
  test/../utilities/optimization/../data_structures/fixed_size_queue.hpp \
- test/../utilities/optimization/../data_structures/../linear_algebra/dense_vector.hpp
+ test/../utilities/optimization/../data_structures/../linear_algebra/dense_vector.hpp \
+ test/../utilities/general/cout_tools.hpp
 
 /usr/include/stdc-predef.h:
 
@@ -513,11 +555,127 @@ test/../neural_network/../utilities/linear_algebra/dense_matrix.hpp:
 
 test/../neural_network/../utilities/linear_algebra/../general/dvec_def.hpp:
 
+test/../neural_network/../utilities/linear_algebra/../general/cout_tools.hpp:
+
+/usr/lib/openmpi/include/mpi.h:
+
+/usr/lib/openmpi/include/mpi_portable_platform.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/mpicxx.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/constants.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/functions.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/datatype.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/exception.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/op.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/status.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/request.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/group.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/comm.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/win.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/file.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/errhandler.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/intracomm.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/topology.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/intercomm.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/info.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/datatype_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/functions_inln.h:
+
+/usr/include/string.h:
+
+/usr/include/x86_64-linux-gnu/bits/string3.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/request_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/comm_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/intracomm_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/topology_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/intercomm_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/group_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/op_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/errhandler_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/status_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/info_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/win_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/file_inln.h:
+
+/usr/include/c++/4.8/fstream:
+
+/usr/include/c++/4.8/bits/codecvt.h:
+
+/usr/include/x86_64-linux-gnu/c++/4.8/bits/basic_file.h:
+
+/usr/include/x86_64-linux-gnu/c++/4.8/bits/c++io.h:
+
+/usr/include/c++/4.8/bits/fstream.tcc:
+
+test/../neural_network/../utilities/linear_algebra/../wrappers/mpi_wrapper.hpp:
+
+test/../neural_network/../utilities/linear_algebra/../wrappers/../general/dcmplx_type_def.hpp:
+
+/usr/include/c++/4.8/complex:
+
+/usr/include/c++/4.8/sstream:
+
+/usr/include/c++/4.8/bits/sstream.tcc:
+
+test/../neural_network/../utilities/linear_algebra/../wrappers/../general/cout_tools.hpp:
+
+test/../neural_network/../utilities/linear_algebra/../wrappers/../general/template_tools.hpp:
+
+/usr/include/c++/4.8/iomanip:
+
+/usr/include/c++/4.8/locale:
+
+/usr/include/c++/4.8/bits/locale_facets_nonio.h:
+
+/usr/include/c++/4.8/ctime:
+
+/usr/include/x86_64-linux-gnu/c++/4.8/bits/time_members.h:
+
+/usr/include/x86_64-linux-gnu/c++/4.8/bits/messages_members.h:
+
+/usr/include/libintl.h:
+
+/usr/include/c++/4.8/bits/locale_facets_nonio.tcc:
+
+/usr/include/c++/4.8/chrono:
+
+/usr/include/c++/4.8/ratio:
+
+/usr/include/c++/4.8/limits:
+
 test/../neural_network/../utilities/linear_algebra/dense_vector.hpp:
 
 /usr/include/c++/4.8/random:
-
-/usr/include/c++/4.8/limits:
 
 /usr/include/c++/4.8/bits/random.h:
 
@@ -559,45 +717,15 @@ test/../utilities/linear_algebra/dense_matrix.hpp:
 
 test/../utilities/wrappers/io_wrapper.hpp:
 
-/usr/include/c++/4.8/fstream:
-
-/usr/include/c++/4.8/bits/codecvt.h:
-
-/usr/include/x86_64-linux-gnu/c++/4.8/bits/basic_file.h:
-
-/usr/include/x86_64-linux-gnu/c++/4.8/bits/c++io.h:
-
-/usr/include/c++/4.8/bits/fstream.tcc:
-
-/usr/include/c++/4.8/iomanip:
-
-/usr/include/c++/4.8/locale:
-
-/usr/include/c++/4.8/bits/locale_facets_nonio.h:
-
-/usr/include/c++/4.8/ctime:
-
-/usr/include/x86_64-linux-gnu/c++/4.8/bits/time_members.h:
-
-/usr/include/x86_64-linux-gnu/c++/4.8/bits/messages_members.h:
-
-/usr/include/libintl.h:
-
-/usr/include/c++/4.8/bits/locale_facets_nonio.tcc:
-
 test/../utilities/wrappers/../general/template_tools.hpp:
 
 test/../utilities/wrappers/../general/dcmplx_type_def.hpp:
 
-/usr/include/c++/4.8/complex:
-
-/usr/include/c++/4.8/sstream:
-
-/usr/include/c++/4.8/bits/sstream.tcc:
-
 test/../utilities/optimization/bfgs.hpp:
 
 test/../utilities/optimization/../general/dvec_def.hpp:
+
+test/../utilities/optimization/../general/cout_tools.hpp:
 
 test/../utilities/optimization/../linear_algebra/dense_matrix.hpp:
 
@@ -610,3 +738,5 @@ test/../utilities/optimization/lbfgs.hpp:
 test/../utilities/optimization/../data_structures/fixed_size_queue.hpp:
 
 test/../utilities/optimization/../data_structures/../linear_algebra/dense_vector.hpp:
+
+test/../utilities/general/cout_tools.hpp:
