--- a/src/test/.deps/site_labels_test.Po
+++ b/src/test/.deps/site_labels_test.Po
@@ -106,32 +106,15 @@ test/site_labels_test.o: test/site_labels_test.cpp \
  /usr/include/c++/4.8/bits/vector.tcc \
  test/../features/../utilities/linear_algebra/dense_matrix.hpp \
  test/../features/../utilities/linear_algebra/../general/dvec_def.hpp \
- test/../features/../utilities/linear_algebra/dense_vector.hpp \
- /usr/include/c++/4.8/random /usr/include/c++/4.8/cmath \
- /usr/include/math.h /usr/include/x86_64-linux-gnu/bits/huge_val.h \
- /usr/include/x86_64-linux-gnu/bits/huge_valf.h \
- /usr/include/x86_64-linux-gnu/bits/huge_vall.h \
- /usr/include/x86_64-linux-gnu/bits/inf.h \
- /usr/include/x86_64-linux-gnu/bits/nan.h \
- /usr/include/x86_64-linux-gnu/bits/mathdef.h \
- /usr/include/x86_64-linux-gnu/bits/mathcalls.h \
- /usr/include/x86_64-linux-gnu/bits/mathinline.h \
- /usr/include/c++/4.8/limits /usr/include/c++/4.8/bits/random.h \
- /usr/include/x86_64-linux-gnu/c++/4.8/bits/opt_random.h \
- /usr/lib/gcc/x86_64-linux-gnu/4.8/include/x86intrin.h \
- /usr/lib/gcc/x86_64-linux-gnu/4.8/include/ia32intrin.h \
- /usr/lib/gcc/x86_64-linux-gnu/4.8/include/mmintrin.h \
- /usr/lib/gcc/x86_64-linux-gnu/4.8/include/xmmintrin.h \
- /usr/lib/gcc/x86_64-linux-gnu/4.8/include/mm_malloc.h \
- /usr/lib/gcc/x86_64-linux-gnu/4.8/include/emmintrin.h \
- /usr/lib/gcc/x86_64-linux-gnu/4.8/include/immintrin.h \
- /usr/lib/gcc/x86_64-linux-gnu/4.8/include/fxsrintrin.h \
- /usr/lib/gcc/x86_64-linux-gnu/4.8/include/adxintrin.h \
- /usr/include/c++/4.8/bits/random.tcc /usr/include/c++/4.8/numeric \
- /usr/include/c++/4.8/bits/stl_numeric.h \
- test/../features/../utilities/linear_algebra/blas.hpp \
- /usr/include/c++/4.8/iostream /usr/include/c++/4.8/ostream \
- /usr/include/c++/4.8/ios /usr/include/c++/4.8/bits/ios_base.h \
+ test/../features/../utilities/linear_algebra/../general/cout_tools.hpp \
+ /usr/lib/openmpi/include/mpi.h \
+ /usr/lib/openmpi/include/mpi_portable_platform.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/mpicxx.h \
+ /usr/include/c++/4.8/map /usr/include/c++/4.8/bits/stl_tree.h \
+ /usr/include/c++/4.8/bits/stl_map.h \
+ /usr/include/c++/4.8/bits/stl_multimap.h /usr/include/c++/4.8/iostream \
+ /usr/include/c++/4.8/ostream /usr/include/c++/4.8/ios \
+ /usr/include/c++/4.8/bits/ios_base.h \
  /usr/include/c++/4.8/bits/locale_classes.h \
  /usr/include/c++/4.8/bits/locale_classes.tcc \
  /usr/include/c++/4.8/streambuf /usr/include/c++/4.8/bits/streambuf.tcc \
@@ -145,24 +128,85 @@ test/site_labels_test.o: test/site_labels_test.cpp \
  /usr/include/c++/4.8/bits/basic_ios.tcc \
  /usr/include/c++/4.8/bits/ostream.tcc /usr/include/c++/4.8/istream \
  /usr/include/c++/4.8/bits/istream.tcc \
- test/../features/../utilities/algorithms/quick_sort.hpp \
- test/../features/../utilities/algorithms/../general/dcmplx_type_def.hpp \
- /usr/include/c++/4.8/complex /usr/include/c++/4.8/sstream \
- /usr/include/c++/4.8/bits/sstream.tcc \
- test/../features/../utilities/wrappers/io_wrapper.hpp \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/constants.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/functions.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/datatype.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/exception.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/op.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/status.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/request.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/group.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/comm.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/win.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/file.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/errhandler.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/intracomm.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/topology.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/intercomm.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/info.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/datatype_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/functions_inln.h \
+ /usr/include/string.h /usr/include/x86_64-linux-gnu/bits/string3.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/request_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/comm_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/intracomm_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/topology_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/intercomm_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/group_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/op_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/errhandler_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/status_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/info_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/win_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/file_inln.h \
  /usr/include/c++/4.8/fstream /usr/include/c++/4.8/bits/codecvt.h \
  /usr/include/x86_64-linux-gnu/c++/4.8/bits/basic_file.h \
  /usr/include/x86_64-linux-gnu/c++/4.8/bits/c++io.h \
- /usr/include/c++/4.8/bits/fstream.tcc /usr/include/c++/4.8/iomanip \
- /usr/include/c++/4.8/locale \
+ /usr/include/c++/4.8/bits/fstream.tcc \
+ test/../features/../utilities/linear_algebra/../wrappers/mpi_wrapper.hpp \
+ test/../features/../utilities/linear_algebra/../wrappers/../general/dcmplx_type_def.hpp \
+ /usr/include/c++/4.8/complex /usr/include/c++/4.8/cmath \
+ /usr/include/math.h /usr/include/x86_64-linux-gnu/bits/huge_val.h \
+ /usr/include/x86_64-linux-gnu/bits/huge_valf.h \
+ /usr/include/x86_64-linux-gnu/bits/huge_vall.h \
+ /usr/include/x86_64-linux-gnu/bits/inf.h \
+ /usr/include/x86_64-linux-gnu/bits/nan.h \
+ /usr/include/x86_64-linux-gnu/bits/mathdef.h \
+ /usr/include/x86_64-linux-gnu/bits/mathcalls.h \
+ /usr/include/x86_64-linux-gnu/bits/mathinline.h \
+ /usr/include/c++/4.8/sstream /usr/include/c++/4.8/bits/sstream.tcc \
+ test/../features/../utilities/linear_algebra/../wrappers/../general/cout_tools.hpp \
+ test/../features/../utilities/linear_algebra/../wrappers/../general/template_tools.hpp \
+ /usr/include/c++/4.8/iomanip /usr/include/c++/4.8/locale \
  /usr/include/c++/4.8/bits/locale_facets_nonio.h \
  /usr/include/c++/4.8/ctime \
  /usr/include/x86_64-linux-gnu/c++/4.8/bits/time_members.h \
  /usr/include/x86_64-linux-gnu/c++/4.8/bits/messages_members.h \
  /usr/include/libintl.h /usr/include/c++/4.8/bits/locale_facets_nonio.tcc \
+ /usr/include/c++/4.8/chrono /usr/include/c++/4.8/ratio \
+ /usr/include/c++/4.8/limits \
+ test/../features/../utilities/linear_algebra/dense_vector.hpp \
+ /usr/include/c++/4.8/random /usr/include/c++/4.8/bits/random.h \
+ /usr/include/x86_64-linux-gnu/c++/4.8/bits/opt_random.h \
+ /usr/lib/gcc/x86_64-linux-gnu/4.8/include/x86intrin.h \
+ /usr/lib/gcc/x86_64-linux-gnu/4.8/include/ia32intrin.h \
+ /usr/lib/gcc/x86_64-linux-gnu/4.8/include/mmintrin.h \
+ /usr/lib/gcc/x86_64-linux-gnu/4.8/include/xmmintrin.h \
+ /usr/lib/gcc/x86_64-linux-gnu/4.8/include/mm_malloc.h \
+ /usr/lib/gcc/x86_64-linux-gnu/4.8/include/emmintrin.h \
+ /usr/lib/gcc/x86_64-linux-gnu/4.8/include/immintrin.h \
+ /usr/lib/gcc/x86_64-linux-gnu/4.8/include/fxsrintrin.h \
+ /usr/lib/gcc/x86_64-linux-gnu/4.8/include/adxintrin.h \
+ /usr/include/c++/4.8/bits/random.tcc /usr/include/c++/4.8/numeric \
+ /usr/include/c++/4.8/bits/stl_numeric.h \
+ test/../features/../utilities/linear_algebra/blas.hpp \
+ test/../features/../utilities/algorithms/quick_sort.hpp \
+ test/../features/../utilities/algorithms/../general/dcmplx_type_def.hpp \
+ test/../features/../utilities/wrappers/io_wrapper.hpp \
  test/../features/../utilities/wrappers/../general/template_tools.hpp \
  test/../features/../utilities/wrappers/../general/dcmplx_type_def.hpp \
- test/../utilities/linear_algebra/dense_matrix.hpp
+ test/../utilities/linear_algebra/dense_matrix.hpp \
+ test/../utilities/general/cout_tools.hpp
 
 /usr/include/stdc-predef.h:
 
@@ -434,61 +478,21 @@ test/../features/../utilities/linear_algebra/dense_matrix.hpp:
 
 test/../features/../utilities/linear_algebra/../general/dvec_def.hpp:
 
-test/../features/../utilities/linear_algebra/dense_vector.hpp:
+test/../features/../utilities/linear_algebra/../general/cout_tools.hpp:
 
-/usr/include/c++/4.8/random:
+/usr/lib/openmpi/include/mpi.h:
 
-/usr/include/c++/4.8/cmath:
+/usr/lib/openmpi/include/mpi_portable_platform.h:
 
-/usr/include/math.h:
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/mpicxx.h:
 
-/usr/include/x86_64-linux-gnu/bits/huge_val.h:
+/usr/include/c++/4.8/map:
 
-/usr/include/x86_64-linux-gnu/bits/huge_valf.h:
+/usr/include/c++/4.8/bits/stl_tree.h:
 
-/usr/include/x86_64-linux-gnu/bits/huge_vall.h:
+/usr/include/c++/4.8/bits/stl_map.h:
 
-/usr/include/x86_64-linux-gnu/bits/inf.h:
-
-/usr/include/x86_64-linux-gnu/bits/nan.h:
-
-/usr/include/x86_64-linux-gnu/bits/mathdef.h:
-
-/usr/include/x86_64-linux-gnu/bits/mathcalls.h:
-
-/usr/include/x86_64-linux-gnu/bits/mathinline.h:
-
-/usr/include/c++/4.8/limits:
-
-/usr/include/c++/4.8/bits/random.h:
-
-/usr/include/x86_64-linux-gnu/c++/4.8/bits/opt_random.h:
-
-/usr/lib/gcc/x86_64-linux-gnu/4.8/include/x86intrin.h:
-
-/usr/lib/gcc/x86_64-linux-gnu/4.8/include/ia32intrin.h:
-
-/usr/lib/gcc/x86_64-linux-gnu/4.8/include/mmintrin.h:
-
-/usr/lib/gcc/x86_64-linux-gnu/4.8/include/xmmintrin.h:
-
-/usr/lib/gcc/x86_64-linux-gnu/4.8/include/mm_malloc.h:
-
-/usr/lib/gcc/x86_64-linux-gnu/4.8/include/emmintrin.h:
-
-/usr/lib/gcc/x86_64-linux-gnu/4.8/include/immintrin.h:
-
-/usr/lib/gcc/x86_64-linux-gnu/4.8/include/fxsrintrin.h:
-
-/usr/lib/gcc/x86_64-linux-gnu/4.8/include/adxintrin.h:
-
-/usr/include/c++/4.8/bits/random.tcc:
-
-/usr/include/c++/4.8/numeric:
-
-/usr/include/c++/4.8/bits/stl_numeric.h:
-
-test/../features/../utilities/linear_algebra/blas.hpp:
+/usr/include/c++/4.8/bits/stl_multimap.h:
 
 /usr/include/c++/4.8/iostream:
 
@@ -530,17 +534,69 @@ test/../features/../utilities/linear_algebra/blas.hpp:
 
 /usr/include/c++/4.8/bits/istream.tcc:
 
-test/../features/../utilities/algorithms/quick_sort.hpp:
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/constants.h:
 
-test/../features/../utilities/algorithms/../general/dcmplx_type_def.hpp:
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/functions.h:
 
-/usr/include/c++/4.8/complex:
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/datatype.h:
 
-/usr/include/c++/4.8/sstream:
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/exception.h:
 
-/usr/include/c++/4.8/bits/sstream.tcc:
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/op.h:
 
-test/../features/../utilities/wrappers/io_wrapper.hpp:
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/status.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/request.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/group.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/comm.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/win.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/file.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/errhandler.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/intracomm.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/topology.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/intercomm.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/info.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/datatype_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/functions_inln.h:
+
+/usr/include/string.h:
+
+/usr/include/x86_64-linux-gnu/bits/string3.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/request_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/comm_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/intracomm_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/topology_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/intercomm_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/group_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/op_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/errhandler_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/status_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/info_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/win_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/file_inln.h:
 
 /usr/include/c++/4.8/fstream:
 
@@ -551,6 +607,40 @@ test/../features/../utilities/wrappers/io_wrapper.hpp:
 /usr/include/x86_64-linux-gnu/c++/4.8/bits/c++io.h:
 
 /usr/include/c++/4.8/bits/fstream.tcc:
+
+test/../features/../utilities/linear_algebra/../wrappers/mpi_wrapper.hpp:
+
+test/../features/../utilities/linear_algebra/../wrappers/../general/dcmplx_type_def.hpp:
+
+/usr/include/c++/4.8/complex:
+
+/usr/include/c++/4.8/cmath:
+
+/usr/include/math.h:
+
+/usr/include/x86_64-linux-gnu/bits/huge_val.h:
+
+/usr/include/x86_64-linux-gnu/bits/huge_valf.h:
+
+/usr/include/x86_64-linux-gnu/bits/huge_vall.h:
+
+/usr/include/x86_64-linux-gnu/bits/inf.h:
+
+/usr/include/x86_64-linux-gnu/bits/nan.h:
+
+/usr/include/x86_64-linux-gnu/bits/mathdef.h:
+
+/usr/include/x86_64-linux-gnu/bits/mathcalls.h:
+
+/usr/include/x86_64-linux-gnu/bits/mathinline.h:
+
+/usr/include/c++/4.8/sstream:
+
+/usr/include/c++/4.8/bits/sstream.tcc:
+
+test/../features/../utilities/linear_algebra/../wrappers/../general/cout_tools.hpp:
+
+test/../features/../utilities/linear_algebra/../wrappers/../general/template_tools.hpp:
 
 /usr/include/c++/4.8/iomanip:
 
@@ -568,8 +658,56 @@ test/../features/../utilities/wrappers/io_wrapper.hpp:
 
 /usr/include/c++/4.8/bits/locale_facets_nonio.tcc:
 
+/usr/include/c++/4.8/chrono:
+
+/usr/include/c++/4.8/ratio:
+
+/usr/include/c++/4.8/limits:
+
+test/../features/../utilities/linear_algebra/dense_vector.hpp:
+
+/usr/include/c++/4.8/random:
+
+/usr/include/c++/4.8/bits/random.h:
+
+/usr/include/x86_64-linux-gnu/c++/4.8/bits/opt_random.h:
+
+/usr/lib/gcc/x86_64-linux-gnu/4.8/include/x86intrin.h:
+
+/usr/lib/gcc/x86_64-linux-gnu/4.8/include/ia32intrin.h:
+
+/usr/lib/gcc/x86_64-linux-gnu/4.8/include/mmintrin.h:
+
+/usr/lib/gcc/x86_64-linux-gnu/4.8/include/xmmintrin.h:
+
+/usr/lib/gcc/x86_64-linux-gnu/4.8/include/mm_malloc.h:
+
+/usr/lib/gcc/x86_64-linux-gnu/4.8/include/emmintrin.h:
+
+/usr/lib/gcc/x86_64-linux-gnu/4.8/include/immintrin.h:
+
+/usr/lib/gcc/x86_64-linux-gnu/4.8/include/fxsrintrin.h:
+
+/usr/lib/gcc/x86_64-linux-gnu/4.8/include/adxintrin.h:
+
+/usr/include/c++/4.8/bits/random.tcc:
+
+/usr/include/c++/4.8/numeric:
+
+/usr/include/c++/4.8/bits/stl_numeric.h:
+
+test/../features/../utilities/linear_algebra/blas.hpp:
+
+test/../features/../utilities/algorithms/quick_sort.hpp:
+
+test/../features/../utilities/algorithms/../general/dcmplx_type_def.hpp:
+
+test/../features/../utilities/wrappers/io_wrapper.hpp:
+
 test/../features/../utilities/wrappers/../general/template_tools.hpp:
 
 test/../features/../utilities/wrappers/../general/dcmplx_type_def.hpp:
 
 test/../utilities/linear_algebra/dense_matrix.hpp:
+
+test/../utilities/general/cout_tools.hpp:
