--- a/src/utilities/optimization/.deps/bfgs.Po
+++ b/src/utilities/optimization/.deps/bfgs.Po
@@ -117,10 +117,54 @@ utilities/optimization/bfgs.o: utilities/optimization/bfgs.cpp \
  /usr/include/c++/4.8/bits/stl_vector.h \
  /usr/include/c++/4.8/bits/stl_bvector.h \
  /usr/include/c++/4.8/bits/vector.tcc \
+ utilities/optimization/../general/cout_tools.hpp \
+ /usr/lib/openmpi/include/mpi.h \
+ /usr/lib/openmpi/include/mpi_portable_platform.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/mpicxx.h \
+ /usr/include/c++/4.8/map /usr/include/c++/4.8/bits/stl_tree.h \
+ /usr/include/c++/4.8/bits/stl_map.h \
+ /usr/include/c++/4.8/bits/stl_multimap.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/constants.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/functions.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/datatype.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/exception.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/op.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/status.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/request.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/group.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/comm.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/win.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/file.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/errhandler.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/intracomm.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/topology.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/intercomm.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/info.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/datatype_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/functions_inln.h \
+ /usr/include/string.h /usr/include/x86_64-linux-gnu/bits/string3.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/request_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/comm_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/intracomm_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/topology_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/intercomm_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/group_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/op_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/errhandler_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/status_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/info_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/win_inln.h \
+ /usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/file_inln.h \
+ /usr/include/c++/4.8/fstream /usr/include/c++/4.8/bits/codecvt.h \
+ /usr/include/x86_64-linux-gnu/c++/4.8/bits/basic_file.h \
+ /usr/include/x86_64-linux-gnu/c++/4.8/bits/c++io.h \
+ /usr/include/c++/4.8/bits/fstream.tcc \
  utilities/optimization/../linear_algebra/dense_matrix.hpp \
  utilities/optimization/../linear_algebra/../general/dvec_def.hpp \
- utilities/optimization/../linear_algebra/dense_vector.hpp \
- /usr/include/c++/4.8/random /usr/include/c++/4.8/cmath \
+ utilities/optimization/../linear_algebra/../general/cout_tools.hpp \
+ utilities/optimization/../linear_algebra/../wrappers/mpi_wrapper.hpp \
+ utilities/optimization/../linear_algebra/../wrappers/../general/dcmplx_type_def.hpp \
+ /usr/include/c++/4.8/complex /usr/include/c++/4.8/cmath \
  /usr/include/math.h /usr/include/x86_64-linux-gnu/bits/huge_val.h \
  /usr/include/x86_64-linux-gnu/bits/huge_valf.h \
  /usr/include/x86_64-linux-gnu/bits/huge_vall.h \
@@ -129,7 +173,19 @@ utilities/optimization/bfgs.o: utilities/optimization/bfgs.cpp \
  /usr/include/x86_64-linux-gnu/bits/mathdef.h \
  /usr/include/x86_64-linux-gnu/bits/mathcalls.h \
  /usr/include/x86_64-linux-gnu/bits/mathinline.h \
- /usr/include/c++/4.8/limits /usr/include/c++/4.8/bits/random.h \
+ /usr/include/c++/4.8/sstream /usr/include/c++/4.8/bits/sstream.tcc \
+ utilities/optimization/../linear_algebra/../wrappers/../general/cout_tools.hpp \
+ utilities/optimization/../linear_algebra/../wrappers/../general/template_tools.hpp \
+ /usr/include/c++/4.8/iomanip /usr/include/c++/4.8/locale \
+ /usr/include/c++/4.8/bits/locale_facets_nonio.h \
+ /usr/include/c++/4.8/ctime \
+ /usr/include/x86_64-linux-gnu/c++/4.8/bits/time_members.h \
+ /usr/include/x86_64-linux-gnu/c++/4.8/bits/messages_members.h \
+ /usr/include/libintl.h /usr/include/c++/4.8/bits/locale_facets_nonio.tcc \
+ /usr/include/c++/4.8/chrono /usr/include/c++/4.8/ratio \
+ /usr/include/c++/4.8/limits \
+ utilities/optimization/../linear_algebra/dense_vector.hpp \
+ /usr/include/c++/4.8/random /usr/include/c++/4.8/bits/random.h \
  /usr/include/x86_64-linux-gnu/c++/4.8/bits/opt_random.h \
  /usr/lib/gcc/x86_64-linux-gnu/4.8/include/x86intrin.h \
  /usr/lib/gcc/x86_64-linux-gnu/4.8/include/ia32intrin.h \
@@ -448,13 +504,107 @@ utilities/optimization/../general/dvec_def.hpp:
 
 /usr/include/c++/4.8/bits/vector.tcc:
 
+utilities/optimization/../general/cout_tools.hpp:
+
+/usr/lib/openmpi/include/mpi.h:
+
+/usr/lib/openmpi/include/mpi_portable_platform.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/mpicxx.h:
+
+/usr/include/c++/4.8/map:
+
+/usr/include/c++/4.8/bits/stl_tree.h:
+
+/usr/include/c++/4.8/bits/stl_map.h:
+
+/usr/include/c++/4.8/bits/stl_multimap.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/constants.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/functions.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/datatype.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/exception.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/op.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/status.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/request.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/group.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/comm.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/win.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/file.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/errhandler.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/intracomm.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/topology.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/intercomm.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/info.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/datatype_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/functions_inln.h:
+
+/usr/include/string.h:
+
+/usr/include/x86_64-linux-gnu/bits/string3.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/request_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/comm_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/intracomm_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/topology_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/intercomm_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/group_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/op_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/errhandler_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/status_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/info_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/win_inln.h:
+
+/usr/lib/openmpi/include/openmpi/ompi/mpi/cxx/file_inln.h:
+
+/usr/include/c++/4.8/fstream:
+
+/usr/include/c++/4.8/bits/codecvt.h:
+
+/usr/include/x86_64-linux-gnu/c++/4.8/bits/basic_file.h:
+
+/usr/include/x86_64-linux-gnu/c++/4.8/bits/c++io.h:
+
+/usr/include/c++/4.8/bits/fstream.tcc:
+
 utilities/optimization/../linear_algebra/dense_matrix.hpp:
 
 utilities/optimization/../linear_algebra/../general/dvec_def.hpp:
 
-utilities/optimization/../linear_algebra/dense_vector.hpp:
+utilities/optimization/../linear_algebra/../general/cout_tools.hpp:
 
-/usr/include/c++/4.8/random:
+utilities/optimization/../linear_algebra/../wrappers/mpi_wrapper.hpp:
+
+utilities/optimization/../linear_algebra/../wrappers/../general/dcmplx_type_def.hpp:
+
+/usr/include/c++/4.8/complex:
 
 /usr/include/c++/4.8/cmath:
 
@@ -476,7 +626,39 @@ utilities/optimization/../linear_algebra/dense_vector.hpp:
 
 /usr/include/x86_64-linux-gnu/bits/mathinline.h:
 
+/usr/include/c++/4.8/sstream:
+
+/usr/include/c++/4.8/bits/sstream.tcc:
+
+utilities/optimization/../linear_algebra/../wrappers/../general/cout_tools.hpp:
+
+utilities/optimization/../linear_algebra/../wrappers/../general/template_tools.hpp:
+
+/usr/include/c++/4.8/iomanip:
+
+/usr/include/c++/4.8/locale:
+
+/usr/include/c++/4.8/bits/locale_facets_nonio.h:
+
+/usr/include/c++/4.8/ctime:
+
+/usr/include/x86_64-linux-gnu/c++/4.8/bits/time_members.h:
+
+/usr/include/x86_64-linux-gnu/c++/4.8/bits/messages_members.h:
+
+/usr/include/libintl.h:
+
+/usr/include/c++/4.8/bits/locale_facets_nonio.tcc:
+
+/usr/include/c++/4.8/chrono:
+
+/usr/include/c++/4.8/ratio:
+
 /usr/include/c++/4.8/limits:
+
+utilities/optimization/../linear_algebra/dense_vector.hpp:
+
+/usr/include/c++/4.8/random:
 
 /usr/include/c++/4.8/bits/random.h:
 
